--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('../partials/header') %>
+<%- include('../partials/navbar') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Gig Finder</title>
-</head>
-
-<body>
     <h1>Sign in</h1>
     <form action="/auth/sign-in" method="post">
 
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" required>
+        <label for="email">Email:</label>
+        <input type="text" name="email" id="email" required>
 
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required>
 
         <button type="submit">Sign in</button>
     </form>
-</body>
 
-</html>
+<%- include('../partials/footer') %>
