--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
+<%- include('./partials/header') %>
+<%- include('./partials/navbar') %>
+
 <h1>Welcome to The Gig Finder</h1>
+
+<%- include('./partials/footer') %>
