create gig page added

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
     |
     <a href="/gigs">Gigs</a>
     |
-    <a href="/recipes/new">Create a Gig</a>
+    <a href="/gigs/new">Create a Gig</a>
     <% } %>
 
     <br>
