--- a/views/gigs/show.ejs
+++ b/views/gigs/show.ejs
@@ -23,6 +23,10 @@
     <strong>Owner:</strong> <%= gig.owner.email %>
 </p>
 
-
-
+<% if(user.id === gig.owner.id) { %>
+    <form action="/gigs/<%= gig.id %>?_method=delete" method="post">
+    <button>Delete</button>
+<% } %>
+    </form>
+    
 <%- include('../partials/footer') %>
