profile route added

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,6 +12,7 @@
 
     <% if(user) { %>
         Welcome, <%= user.email %> |
+        <a href="/profile">My Profile</a> |
         <a href="/auth/sign-out">Sign Out</a>
 
     <% } else { %>
