--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,4 +3,6 @@
 
 <h1>Welcome to The Gig Finder</h1>
 
+<img src="/img/collage.jpg" alt="collage of people partying or at a concert" class="home-img">
+
 <%- include('./partials/footer') %>
