--- a/views/gigs/new.ejs
+++ b/views/gigs/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 <%- include('../partials/navbar') %>
 
-    <h2>Create a Gig</h2>
+    <h1>Create a Gig</h1>
 
     <form action="/gigs" method="post">
         <label for="nameInput">Name:</label>
@@ -29,7 +29,7 @@
 
         <br>
 
-        <button>Create</button>
+        <button id="create">Create</button>
 
     </form>
 
