--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,16 +1,20 @@
 <%- include('../partials/header') %>
 <%- include('../partials/navbar') %>
 
-    <h1>Sign in</h1>
+    <h1 class="sign-in-title">Sign In</h1>
     <form action="/auth/sign-in" method="post">
 
-        <label for="email">Email:</label>
+        <label for="email"><b>Email:</b></label>
         <input type="text" name="email" id="email" required>
 
-        <label for="password">Password:</label>
+<br><br>
+
+        <label for="password"><b>Password:</b></label>
         <input type="password" name="password" id="password" required>
 
-        <button type="submit">Sign in</button>
+<br><br>
+
+        <button type="submit" class="auth-button">Sign In</button>
     </form>
 
 <%- include('../partials/footer') %>
