--- a/views/gigs/index.ejs
+++ b/views/gigs/index.ejs
@@ -6,7 +6,7 @@
 <div class="all-gigs">
 <img src="/img/party.jpg" alt="people partying at a club" class="all-gigs-img">
 
-<ul id="gig-list">
+<ul class="gig-list">
     <% for (const gig of gigs) { %>
         <li>
             <a href="/gigs/<%= gig.id %>">
