--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,9 +5,21 @@ body {
 
 .gig-list {
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
-    font-weight: 700;
-    font-size: 20px;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
     list-style: none;
+}
+
+.gig-list li {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.gig-list-profile {
+    font-family: 'Roboto', Verdana, Tahoma, sans-serif;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 nav {
@@ -41,40 +53,44 @@ h1 {
     font-family: 'Protest Guerrilla', Verdana, Tahoma, sans-serif;
 }
 
-#going {
+#going, #not-going {
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
     font-weight: 700;
+    font-size: 18px;
+    width: 100px;
+    height: 55px;
+    background-color: #F5C6C6;
 }
 
-#not-going {
-    font-family: 'Roboto', Verdana, Tahoma, sans-serif;
-    font-weight: 700;
-}
 
-#edit {
+#edit, #create, #update {
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
     font-weight: 700;
+    background-color: #F5C6C6;
+    width: 80px;
+    height: 35px;
 }
 
 #delete {
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
     font-weight: 700;
+    background-color: #F5C6C6;
+    width: 80px;
+    height: 25px;
 }
-
-#create, #update {
-    font-family: 'Roboto', Verdana, Tahoma, sans-serif;
-    font-weight: 700;
-}
-
 
 .auth-button {
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
     font-weight: 700;
+    font-size: 16px;
+    width: 100px;
+    height: 55px;
+    background-color: #F5C6C6;
 }
 
 .home-img {
-    width: 700px;
-    height: 700px;
+    width: 500px;
+    height: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -87,15 +103,6 @@ h1 {
     margin: 0 auto;
 }
 
-.all-gigs {
-    text-align: center;
-}
-
 .attendees {
     font-family: 'Protest Guerrilla', Verdana, Tahoma, sans-serif;
-}
-
-.profile-gigs {
-    font-size: 15px;
-    font-weight: 500;
 }
